MW Changelog:
v22.6:
- Parthenon: 
	- updated description (supply change);
	- 
- slightly reowrked description of Great Work slots;

v22.5.2:
- fixed one icon;

v22.5.1:
- updated World Wonder's descriiption to latest changes;

v22.5:
- new AssignStartingPlots.lua file from VP 4.9.1;
- fixed Train Station issue;

v22.4.1:
- fixed AssignStartingPlots.lua file and added some crucial changes from VP 4.6;

v22.4:
- Peterhof:
	- gains additional GAP;
	- GAP boost increased to +25% (was +15%);
- updated AssignStartingPlots.lua file;
- fixed Sigiriya's description;

v22.3:
- clarified texts for Rock of Gibraltar and St. Peter's Basilica;
- added 3d model for Eye of Sahara (by @ghost toast);
- added 3d (better) model for Dallol (by @ghost toast);
- added Falun Mine's missing requirement (possible Copper placement);
- lowered Falun Mine's requirement (now 3 Mines);
- Eye of the Sahara now spawns Mountains around more frequently;
- fixed Tag error (with VP 4.5.1);
- minor text fixes;

v22.2:
- Rock of Gibraltar: now grants 1 League Vote for each 8 CSs at the game start;

v22.1:
- Plain of Jars: moved to Military Theory (was Calendar);
- Plain of Jars and Marae Arahurahu now mention how much Faith they produce on unit kill (base tooltip addition);
- St. Peter's Basilica: now grants 1 League Vote for each 6 CSs at the game start;
- Fletcher: now grants "Yerba de la Fleche" promotion globally (was only for units trained in this city);
- "Yerba de la Fleche": now +50% Attacking RCS vs Wounded Units (was 5% chance for instakill);

v22:
- updated AssignStartinPlots.lua file; added special replacement file with only reworked functions (must be tested, but if it works, then there will be less compatibility issues);
- new World Wonder icons for Plain of Jars, Sigiriya and Hollywood (thanks to @hokath);
- corrected World Wonder icons for Sanbo Honbu (thanks to @hokath);
- changed manual entries for sea resources to automatic ones with a query (Itsukushima);